unpackaged/main/default/objects/Form__c/fields/Above_Ground_Valves_and_Piping__c.field-meta.xml
<CustomField>
    <fullName>Above_Ground_Valves_and_Piping__c</fullName>
    <label>Above Ground Valves and Piping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>