unpackaged/main/default/objects/Form__c/fields/Acknowledge_that_everyone_on_the_job_has__c.field-meta.xml
<CustomField>
    <fullName>Acknowledge_that_everyone_on_the_job_has__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop work acknowledgement</label>
    <type>Checkbox</type>
</CustomField>