unpackaged/main/default/objects/Form__c/fields/Adequate_Thermal_Background__c.field-meta.xml
<CustomField>
    <fullName>Adequate_Thermal_Background__c</fullName>
    <label>Adequate Thermal Background?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>