unpackaged/main/default/objects/Form__c/fields/Adequate_thermal_background_during_surv__c.field-meta.xml
<CustomField>
    <fullName>Adequate_thermal_background_during_surv__c</fullName>
    <inlineHelpText>Techniques used could include: HSM mode, adjusting viewing angle, clipboard or known backgroung)</inlineHelpText>
    <label>Adequate thermal background during surv?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>