unpackaged/main/default/objects/Form__c/fields/All_dikes_berms_trenches_are_in_good_con__c.field-meta.xml
<CustomField>
    <fullName>All_dikes_berms_trenches_are_in_good_con__c</fullName>
    <description>All dikes/berms/trenches are in good condition and have not
been altered from the facility diagram</description>
    <inlineHelpText>All dikes/berms/trenches are in good condition and have not
been altered from the facility diagram</inlineHelpText>
    <label>Dikes/berms/trenches good condition?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>