unpackaged/main/default/objects/Form__c/fields/All_fugitive_emissions_compts_surveyed__c.field-meta.xml
<CustomField>
    <fullName>All_fugitive_emissions_compts_surveyed__c</fullName>
    <label>All fugitive emissions compts surveyed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>