unpackaged/main/default/objects/Form__c/fields/Ambient_Temperature_Degrees_F__c.field-meta.xml
<CustomField>
    <fullName>Ambient_Temperature_Degrees_F__c</fullName>
    <label>Ambient Temperature (Degrees F)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>