unpackaged/main/default/objects/Form__c/fields/Apron__c.field-meta.xml
<CustomField>
    <fullName>Apron__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apron</label>
    <type>Checkbox</type>
</CustomField>