unpackaged/main/default/objects/Form__c/fields/Associate_Permit_Type_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Associate_Permit_Type_Picklist__c</fullName>
    <label>Associate Permit Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Right to Work Permit</fullName>
            </value>
            <value>
                <fullName>Hot Work Permit</fullName>
            </value>
            <value>
                <fullName>Confined Space Permit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>