unpackaged/main/default/objects/Form__c/fields/Associated_Permit_No__c.field-meta.xml
<CustomField>
    <fullName>Associated_Permit_No__c</fullName>
    <label>Associated Permit No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>