unpackaged/main/default/objects/Form__c/fields/Associated_Permit_Type__c.field-meta.xml
<CustomField>
    <fullName>Associated_Permit_Type__c</fullName>
    <label>Associated Permit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>