unpackaged/main/default/objects/Form__c/fields/Average_Metal_Loss_measured_Mils__c.field-meta.xml
<CustomField>
    <fullName>Average_Metal_Loss_measured_Mils__c</fullName>
    <label>Average Metal Loss measured Mils</label>
    <type>TextArea</type>
</CustomField>