unpackaged/main/default/objects/Form__c/fields/Basis_for_Delay__c.field-meta.xml
<CustomField>
    <fullName>Basis_for_Delay__c</fullName>
    <label>Basis for Delay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shutdown/Blowdown of equipment required to complete repair and emissions from repair would be greater than the leak itself</fullName>
            </value>
            <value>
                <fullName>Repair would be unsafe during operation of the unit|Repair is technically infeasible</fullName>
            </value>
            <value>
                <fullName>Additional parts to be ordered (not an acceptable delay for OOOOa inspections)</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>