unpackaged/main/default/objects/Form__c/fields/Blow_down_Fluid_from_Fuel_Pots__c.field-meta.xml
<CustomField>
    <fullName>Blow_down_Fluid_from_Fuel_Pots__c</fullName>
    <label>Blow-down Fluid from Fuel Pots</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>