unpackaged/main/default/objects/Form__c/fields/Blowdown_Meter_Run__c.field-meta.xml
<CustomField>
    <fullName>Blowdown_Meter_Run__c</fullName>
    <label>Blowdown Meter Run</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>