unpackaged/main/default/objects/Form__c/fields/Camera_passed_verification_check__c.field-meta.xml
<CustomField>
    <fullName>Camera_passed_verification_check__c</fullName>
    <label>Camera passed verification check?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>