unpackaged/main/default/objects/Form__c/fields/Casing_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Casing_Pressure__c</fullName>
    <description>Casing Pressure</description>
    <label>Casing Pressure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>