unpackaged/main/default/objects/Form__c/fields/Check_Containment_Boom__c.field-meta.xml
<CustomField>
    <fullName>Check_Containment_Boom__c</fullName>
    <description>Check containment boom to ensure it is properly anchored and adjust length of anchor lines as needed as pond fills to catch and control fluids near pond inlet piping (we will have to draw containment in as pond fills)</description>
    <inlineHelpText>Check containment boom to ensure it is properly anchored and adjust length of anchor lines as needed as pond fills to catch and control fluids near pond inlet piping (we will have to draw containment in as pond fills)</inlineHelpText>
    <label>Check Containment Boom</label>
    <type>TextArea</type>
</CustomField>