unpackaged/main/default/objects/Form__c/fields/Check_Day_Tank_Levels__c.field-meta.xml
<CustomField>
    <fullName>Check_Day_Tank_Levels__c</fullName>
    <label>Check Day Tank Levels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>