unpackaged/main/default/objects/Form__c/fields/Check_Discharge_Pressure_Operating_range__c.field-meta.xml
<CustomField>
    <fullName>Check_Discharge_Pressure_Operating_range__c</fullName>
    <description>Check discharge pressure operating range (when pump is on) to be between 60-80 psig (can adjust as needed to achieve desired flowrate- lower pressure will increase flow rate)</description>
    <inlineHelpText>Check discharge pressure operating range (when pump is on) to be between 60-80 psig (can adjust as needed to achieve desired flowrate- lower pressure will increase flow rate)</inlineHelpText>
    <label>Check Discharge Pressure Operating range</label>
    <type>TextArea</type>
</CustomField>