unpackaged/main/default/objects/Form__c/fields/Check_Frac_Pond_Level__c.field-meta.xml
<CustomField>
    <fullName>Check_Frac_Pond_Level__c</fullName>
    <description>Check Frac Pond Level</description>
    <inlineHelpText>Check Frac Pond Level</inlineHelpText>
    <label>Check Frac Pond Level</label>
    <type>TextArea</type>
</CustomField>