unpackaged/main/default/objects/Form__c/fields/Check_Integrity_of_Poly_Line__c.field-meta.xml
<CustomField>
    <fullName>Check_Integrity_of_Poly_Line__c</fullName>
    <description>Check integrity of poly line by walking poly line from POD to pond</description>
    <inlineHelpText>Check integrity of poly line by walking poly line from POD to pond</inlineHelpText>
    <label>Check Integrity of Poly Line</label>
    <type>TextArea</type>
</CustomField>