unpackaged/main/default/objects/Form__c/fields/Check_Placement_of_Pipe_On_inlet_to_Pond__c.field-meta.xml
<CustomField>
    <fullName>Check_Placement_of_Pipe_On_inlet_to_Pond__c</fullName>
    <description>Check placement of pipe on inlet of pond to ensure it is properly anchored, located inside the berm and inside the containment boom</description>
    <inlineHelpText>Check placement of pipe on inlet of pond to ensure it is properly anchored, located inside the berm and inside the containment boom</inlineHelpText>
    <label>Check Placement of Pipe On inlet to Pond</label>
    <type>TextArea</type>
</CustomField>