unpackaged/main/default/objects/Form__c/fields/Check_Pond_For_Shimmer__c.field-meta.xml
<CustomField>
    <fullName>Check_Pond_For_Shimmer__c</fullName>
    <description>Check pond for any shimmer/ skim oil and report any oil found</description>
    <inlineHelpText>Check pond for any shimmer/ skim oil and report any oil found</inlineHelpText>
    <label>Check Pond For Shimmer</label>
    <type>TextArea</type>
</CustomField>