unpackaged/main/default/objects/Form__c/fields/Check_Pond_Level__c.field-meta.xml
<CustomField>
    <fullName>Check_Pond_Level__c</fullName>
    <description>Check pond level and report a full pond and LOTO pump as needed to stay within the berms</description>
    <inlineHelpText>Check pond level and report a full pond and LOTO pump as needed to stay within the berms</inlineHelpText>
    <label>Check Pond Level</label>
    <type>TextArea</type>
</CustomField>