unpackaged/main/default/objects/Form__c/fields/Check_Pond_Test_Station__c.field-meta.xml
<CustomField>
    <fullName>Check_Pond_Test_Station__c</fullName>
    <description>Check Pond Test Station</description>
    <inlineHelpText>Check Pond Test Station</inlineHelpText>
    <label>Check Pond Test Station</label>
    <type>TextArea</type>
</CustomField>