unpackaged/main/default/objects/Form__c/fields/Check_Pump_Operation__c.field-meta.xml
<CustomField>
    <fullName>Check_Pump_Operation__c</fullName>
    <description>Check Pump Operation</description>
    <inlineHelpText>Check Pump Operation</inlineHelpText>
    <label>Check Pump Operation</label>
    <type>TextArea</type>
</CustomField>