unpackaged/main/default/objects/Form__c/fields/Chemical_Suit__c.field-meta.xml
<CustomField>
    <fullName>Chemical_Suit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chemical Suit</label>
    <type>Checkbox</type>
</CustomField>