unpackaged/main/default/objects/Form__c/fields/Coating_Type__c.field-meta.xml
<CustomField>
    <fullName>Coating_Type__c</fullName>
    <description>Coating Type</description>
    <inlineHelpText>Coating Type if selected yes on Atmospheric Corrosion Survey</inlineHelpText>
    <label>Coating Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>