unpackaged/main/default/objects/Form__c/fields/Color_Cut_Tanks_on_Water_Tanks__c.field-meta.xml
<CustomField>
    <fullName>Color_Cut_Tanks_on_Water_Tanks__c</fullName>
    <description>Color cut tanks on water tank</description>
    <inlineHelpText>Color cut tanks on water tank</inlineHelpText>
    <label>Color Cut Tanks on Water Tanks</label>
    <type>TextArea</type>
</CustomField>