unpackaged/main/default/objects/Form__c/fields/Comments_10__c.field-meta.xml
<CustomField>
    <fullName>Comments_10__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>