unpackaged/main/default/objects/Form__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connector</fullName>
            </value>
            <value>
                <fullName>Enardo</fullName>
            </value>
            <value>
                <fullName>Gauges</fullName>
            </value>
            <value>
                <fullName>Flange</fullName>
            </value>
            <value>
                <fullName>Pilots</fullName>
            </value>
            <value>
                <fullName>Level Controller</fullName>
            </value>
            <value>
                <fullName>Pressure Regulator</fullName>
            </value>
            <value>
                <fullName>Pressure Relief Device</fullName>
            </value>
            <value>
                <fullName>Pump Seal</fullName>
            </value>
            <value>
                <fullName>Quick Exhaust</fullName>
            </value>
            <value>
                <fullName>Solenoid</fullName>
            </value>
            <value>
                <fullName>Thief Hatch</fullName>
            </value>
            <value>
                <fullName>Valve</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>