unpackaged/main/default/objects/Form__c/fields/Component_Unsafe_or_Difficult_to_Monitor__c.field-meta.xml
<CustomField>
    <fullName>Component_Unsafe_or_Difficult_to_Monitor__c</fullName>
    <label>Component Unsafe or Difficult to Monitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsafe</fullName>
            </value>
            <value>
                <fullName>Difficult</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>