unpackaged/main/default/objects/Form__c/fields/Condition_of_Air_to_Soil_Interface__c.field-meta.xml
<CustomField>
    <fullName>Condition_of_Air_to_Soil_Interface__c</fullName>
    <description>Condition of Air-to-Soil Interface</description>
    <inlineHelpText>Please enter the condition of the Air-to- Soil condition.</inlineHelpText>
    <label>Condition of Air-to-Soil Interface</label>
    <type>TextArea</type>
</CustomField>