unpackaged/main/default/objects/Form__c/fields/Condition_of_Pipe_at_Pipe_Supports__c.field-meta.xml
<CustomField>
    <fullName>Condition_of_Pipe_at_Pipe_Supports__c</fullName>
    <description>Condition of Pipe at Pipe Supports</description>
    <label>Condition of Pipe at Pipe Supports</label>
    <type>TextArea</type>
</CustomField>