unpackaged/main/default/objects/Form__c/fields/Confined_Space_Entry__c.field-meta.xml
<CustomField>
    <fullName>Confined_Space_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confined Space Entry</label>
    <type>Checkbox</type>
</CustomField>