unpackaged/main/default/objects/Form__c/fields/Confined_Space_Entry_Pick__c.field-meta.xml
<CustomField>
    <fullName>Confined_Space_Entry_Pick__c</fullName>
    <label>Confined Space Entry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discuss confined space entry safe work practice</fullName>
            </value>
            <value>
                <fullName>Conduct atmospheric testing</fullName>
            </value>
            <value>
                <fullName>Monitor access or entry</fullName>
            </value>
            <value>
                <fullName>Protect surfaces from inadvertent contact</fullName>
            </value>
            <value>
                <fullName>Prohibit mobile engines near confined spaces</fullName>
            </value>
            <value>
                <fullName>Provide Observer</fullName>
            </value>
            <value>
                <fullName>Develop rescue plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>