unpackaged/main/default/objects/Form__c/fields/Consistency_of_Paraffin__c.field-meta.xml
<CustomField>
    <fullName>Consistency_of_Paraffin__c</fullName>
    <label>Consistency of Paraffin</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard, not malleable and unable to form together if in small chunks</fullName>
            </value>
            <value>
                <fullName>Medium, malleable and able to hold form</fullName>
            </value>
            <value>
                <fullName>Soft, runny and unable to hold form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>