unpackaged/main/default/objects/Form__c/fields/Containment_Structures__c.field-meta.xml
<CustomField>
    <fullName>Containment_Structures__c</fullName>
    <label>Containment Structures</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>