unpackaged/main/default/objects/Form__c/fields/Corrective_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Taken__c</fullName>
    <label>Corrective Action Taken</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clean &amp; Adjust</fullName>
            </value>
            <value>
                <fullName>Equipment/Parts Replaced</fullName>
            </value>
            <value>
                <fullName>Removed Equipment</fullName>
            </value>
            <value>
                <fullName>Tightened Fittings</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>