unpackaged/main/default/objects/Form__c/fields/Count_of_Steps__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Steps__c</fullName>
    <label>Count of Steps</label>
    <summaryForeignKey>Task__c.Form__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>