unpackaged/main/default/objects/Form__c/fields/Create_by_Department__c.field-meta.xml
<CustomField>
    <fullName>Create_by_Department__c</fullName>
    <formula>CreatedBy.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create by Department</label>
    <type>Text</type>
</CustomField>