unpackaged/main/default/objects/Form__c/fields/CSE1_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>CSE1_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSE1_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>