unpackaged/main/default/objects/Form__c/fields/CSE2_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>CSE2_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSE2_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>