unpackaged/main/default/objects/Form__c/fields/Date_JSA__c.field-meta.xml
<CustomField>
    <fullName>Date_JSA__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>