unpackaged/main/default/objects/Form__c/fields/Date_of_Repair_Verification__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Repair_Verification__c</fullName>
    <label>Date of Repair Verification</label>
    <type>DateTime</type>
</CustomField>