unpackaged/main/default/objects/Form__c/fields/Delayed_Repair_Comments__c.field-meta.xml
<CustomField>
    <fullName>Delayed_Repair_Comments__c</fullName>
    <label>Delayed Repair Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>