unpackaged/main/default/objects/Form__c/fields/Detailed_Description_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description_of_Work__c</fullName>
    <label>Detailed Description of Work</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>