unpackaged/main/default/objects/Form__c/fields/Deviations_from_the_monitoring_plan__c.field-meta.xml
<CustomField>
    <fullName>Deviations_from_the_monitoring_plan__c</fullName>
    <label>Deviations from the monitoring plan?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>