unpackaged/main/default/objects/Form__c/fields/Difficult_Unsafe_to_Monitor_Components__c.field-meta.xml
<CustomField>
    <fullName>Difficult_Unsafe_to_Monitor_Components__c</fullName>
    <label>Difficult/Unsafe to Monitor Components</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>