unpackaged/main/default/objects/Form__c/fields/DO2_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>DO2_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DO2_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>