unpackaged/main/default/objects/Form__c/fields/DO3_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>DO3_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DO3_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>