unpackaged/main/default/objects/Form__c/fields/Draw_Clean_Oil_Sample_from_Test_Port__c.field-meta.xml
<CustomField>
    <fullName>Draw_Clean_Oil_Sample_from_Test_Port__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Draw Clean Oil Sample from Test Port</label>
    <type>Checkbox</type>
</CustomField>