unpackaged/main/default/objects/Form__c/fields/Dropped_Objects__c.field-meta.xml
<CustomField>
    <fullName>Dropped_Objects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dropped Objects</label>
    <type>Checkbox</type>
</CustomField>