unpackaged/main/default/objects/Form__c/fields/Dust_Mask_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>Dust_Mask_JSAPDF__c</fullName>
    <formula>INCLUDES( Respirator_Type__c , &quot;Dust Mask&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dust Mask</label>
    <type>Checkbox</type>
</CustomField>