unpackaged/main/default/objects/Form__c/fields/E2_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>E2_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E2_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>