unpackaged/main/default/objects/Form__c/fields/E3_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>E3_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E3_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>