unpackaged/main/default/objects/Form__c/fields/EAT1_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>EAT1_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EAT1_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>