unpackaged/main/default/objects/Form__c/fields/EAT2_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>EAT2_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EAT2_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>