unpackaged/main/default/objects/Form__c/fields/EAT3_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>EAT3_JSAPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EAT3_JSAPDF</label>
    <type>Checkbox</type>
</CustomField>