unpackaged/main/default/objects/Form__c/fields/Equipment_and_Tools__c.field-meta.xml
<CustomField>
    <fullName>Equipment_and_Tools__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipment and Tools</label>
    <type>Checkbox</type>
</CustomField>