unpackaged/main/default/objects/Form__c/fields/Equipment_and_Tools_Pick__c.field-meta.xml
<CustomField>
    <fullName>Equipment_and_Tools_Pick__c</fullName>
    <label>Equipment and Tools</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inspect equipment and tools</fullName>
            </value>
            <value>
                <fullName>Brass tools necessary</fullName>
            </value>
            <value>
                <fullName>Use protective guards</fullName>
            </value>
            <value>
                <fullName>Use correct tools and equipment for task</fullName>
            </value>
            <value>
                <fullName>Protect or remove sharp edges</fullName>
            </value>
            <value>
                <fullName>Apply hand safety principles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>