unpackaged/main/default/objects/Form__c/fields/Equipment_Leak_Log_Details__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Leak_Log_Details__c</fullName>
    <label>Equipment Leak Log Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>