unpackaged/main/default/objects/Form__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compressor</fullName>
            </value>
            <value>
                <fullName>Flare/Combustor/Incinerator/Vent Stack</fullName>
            </value>
            <value>
                <fullName>Cooler</fullName>
            </value>
            <value>
                <fullName>Lease Automatic Custody Transfer(s) (LACT)</fullName>
            </value>
            <value>
                <fullName>Oil Tank</fullName>
            </value>
            <value>
                <fullName>Pig Launcher/Receiver</fullName>
            </value>
            <value>
                <fullName>Pump</fullName>
            </value>
            <value>
                <fullName>Vessel - 2 Phases</fullName>
            </value>
            <value>
                <fullName>Vessel - 3 Phases</fullName>
            </value>
            <value>
                <fullName>Vessel - Fuel Gas Scrubber</fullName>
            </value>
            <value>
                <fullName>Vessel - H2S Treatment</fullName>
            </value>
            <value>
                <fullName>Vessel - Process and Treatment (Heater Treaters/Testers)|Vessel - Miscellaneous Other</fullName>
            </value>
            <value>
                <fullName>VRU</fullName>
            </value>
            <value>
                <fullName>Water Tank</fullName>
            </value>
            <value>
                <fullName>Wellhead</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Other Equipment (not listed above)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>