unpackaged/main/default/objects/Form__c/fields/Excavations__c.field-meta.xml
<CustomField>
    <fullName>Excavations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excavations</label>
    <type>Checkbox</type>
</CustomField>