unpackaged/main/default/objects/Form__c/fields/Excavations_Pick__c.field-meta.xml
<CustomField>
    <fullName>Excavations_Pick__c</fullName>
    <label>Excavations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Have an excavation plan or safe work practice</fullName>
            </value>
            <value>
                <fullName>Locate underground pipes or cables by hand digging</fullName>
            </value>
            <value>
                <fullName>De-energize underground services</fullName>
            </value>
            <value>
                <fullName>Implement confined space entry controls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>