unpackaged/main/default/objects/Form__c/fields/Eye_Protection__c.field-meta.xml
<CustomField>
    <fullName>Eye_Protection__c</fullName>
    <label>Eye Protection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Safety Glasses</fullName>
            </value>
            <value>
                <fullName>Face Shield</fullName>
            </value>
            <value>
                <fullName>Goggles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>