unpackaged/main/default/objects/Form__c/fields/Eye_Protection_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Eye_Protection_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eye Protection</label>
    <type>Checkbox</type>
</CustomField>