unpackaged/main/default/objects/Form__c/fields/Face_Shield_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>Face_Shield_JSAPDF__c</fullName>
    <formula>INCLUDES(Eye_Protection__c, &quot;Face Shield&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Face Shield</label>
    <type>Checkbox</type>
</CustomField>