unpackaged/main/default/objects/Form__c/fields/Facility_Changes__c.field-meta.xml
<CustomField>
    <fullName>Facility_Changes__c</fullName>
    <label>Facility Changes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>