unpackaged/main/default/objects/Form__c/fields/Fall_Protection__c.field-meta.xml
<CustomField>
    <fullName>Fall_Protection__c</fullName>
    <label>Fall Protection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fall Protection</fullName>
            </value>
            <value>
                <fullName>Fall Restraint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>