unpackaged/main/default/objects/Form__c/fields/Fall_Protection_JSAPDF__c.field-meta.xml
<CustomField>
    <fullName>Fall_Protection_JSAPDF__c</fullName>
    <formula>INCLUDES(Fall_Protection__c , &quot;Fall Protection&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fall Protection</label>
    <type>Checkbox</type>
</CustomField>