unpackaged/main/default/objects/Form__c/fields/Fall_Protection_Type__c.field-meta.xml
<CustomField>
    <fullName>Fall_Protection_Type__c</fullName>
    <label>Fall Protection Type:</label>
    <type>TextArea</type>
</CustomField>